# 764d480a107dd98947a54b6be10f407e-a679653c1904e75383ec8e2d4d164e88350d3344

./: .flake8  application.py  pyproject.toml  requirements.txt
.github/workflows/: techstyle-ci.yml
tests/: test_app.py
tests/integration/: test_workflow.py
